[package]
name = "geographiser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pray-for"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.2"
clap = "4.5.4"
color-eyre = "0.6.3"
